--- a/WpfMarathon/Pages/SponsorPage.xaml
+++ b/WpfMarathon/Pages/SponsorPage.xaml
@@ -113,16 +113,16 @@
                     <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="20,0,20,10">
                         <TextBlock Text="Сумма пожертвования" FontSize="16" VerticalAlignment="Center" Margin="0,0,10,0"/>
                         <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
-                            <Button Content="-" Width="50" Height="35" FontSize="16" Margin="0,0,5,0"/>
+                            <Button Content="-" Width="50" Height="35" FontSize="16" Margin="0,0,5,0" Padding="10,0"/>
                             <TextBox Text="$50" Width="100" Height="35" FontSize="24" IsReadOnly="True" Margin="0,0,5,0"/>
-                            <Button Content="+" Width="50" Height="35" FontSize="16" Margin="0,0,0,0"/>
+                            <Button Content="+" Width="50" Height="35" FontSize="16" Margin="0,0,0,0" Padding="10,0"/>
                         </StackPanel>
                     </StackPanel>
 
                     <!-- Кнопки "Заплатить" и "Отмена" -->
                     <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="20,20,20,20" HorizontalAlignment="Right">
-                        <Button Content="Заплатить" Width="150" Height="40" FontSize="16" Margin="0,0,10,0" Padding="10,0"/>
-                        <Button Content="Отмена" Width="150" Height="40" FontSize="16" Padding="10,0"/>
+                        <Button Content="Заплатить" Width="150" Height="40" FontSize="16" Margin="0,0,10,0" Padding="10,0" BorderBrush="Gray" BorderThickness="1"/>
+                        <Button Content="Отмена" Width="150" Height="40" FontSize="16" Padding="10,0" BorderBrush="Gray" BorderThickness="1"/>
                     </StackPanel>
                 </Grid>
             </Grid>
