--- a/WpfMarathon/Pages/RegBegunPage.xaml
+++ b/WpfMarathon/Pages/RegBegunPage.xaml
@@ -10,133 +10,103 @@
 
     <Grid Background="White">
         <!-- Верхняя панель с заголовком -->
-        <DockPanel Margin="10">
-            <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Height="60" VerticalAlignment="Top">
-                <Button Content="Назад" Width="120" Height="50" Foreground="White" Background="#555555" Margin="10,5,10,5" FontSize="22" />
-                <TextBlock Text="MARATHON SKILLS 2016" FontSize="32" FontWeight="Bold" Foreground="White" Margin="10,5,0,5" />
+        <DockPanel LastChildFill="False" Grid.ColumnSpan="8">
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10" Width="1919">
+                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0" >
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="15"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+                <TextBlock Text="MARATHON SKILLS 2025" Foreground="White" FontSize="56" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,20,0,20"/>
+
             </StackPanel>
         </DockPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="87*"/>
+            <ColumnDefinition Width="258"/>
+            <ColumnDefinition Width="368.942"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="443.17"/>
+            <ColumnDefinition Width="75"/>
+            <ColumnDefinition Width="225"/>
+            <ColumnDefinition Width="188*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="112.5"/>
+            <RowDefinition Height="0*"/>
+            <RowDefinition Height="188"/>
+            <RowDefinition Height="72"/>
+            <RowDefinition Height="72"/>
+            <RowDefinition Height="81"/>
+            <RowDefinition Height="78"/>
+            <RowDefinition Height="84"/>
+            <RowDefinition Height="90"/>
+            <RowDefinition Height="235"/>
+            <RowDefinition Height="0*"/>
+            <RowDefinition Height="75"/>
+        </Grid.RowDefinitions>
 
-        <!-- Основной контент -->
-        <Grid Margin="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="79*" />
-                <RowDefinition Height="27*" />
-            </Grid.RowDefinitions>
-            <!-- Заголовок формы -->
-            <TextBlock Text="Регистрация бегуна" FontSize="32" FontWeight="SemiBold" HorizontalAlignment="Center" Margin="0,60,0,700" />
-
-            <!-- Подпись к форме -->
-            <TextBlock Text="Пожалуйста заполните всю информацию, чтобы зарегистрироваться в качестве бегуна" FontSize="20" Margin="20,118,20,20" Grid.RowSpan="2" />
-
-            <!-- Главный Grid для размещения полей -->
-            <Grid Grid.RowSpan="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <!-- Левая колонка -->
-                    <ColumnDefinition Width="Auto" />
-                    <!-- Правая колонка (для фото) -->
-                </Grid.ColumnDefinitions>
-
-                <!-- Левая часть формы -->
-                <Grid Grid.Column="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-
-                    <!-- Email -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,120,0,15">
-                        <TextBlock Text="Email:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <TextBox Name="EmailBox" Width="350" Height="60" Margin="15,0,0,0" FontSize="20" />
-                    </StackPanel>
-
-                    <!-- Пароль -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,0,0,15">
-                        <TextBlock Text="Пароль:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <PasswordBox Name="PasswordBox" Width="350" Height="60" Margin="15,0,0,0" FontSize="20" />
-                    </StackPanel>
-
-                    <!-- Повтор пароля -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="0,0,0,15">
-                        <TextBlock Text="Повторите пароль:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <PasswordBox Name="ConfirmPasswordBox" Width="350" Height="60" Margin="15,0,0,0" FontSize="20" />
-                    </StackPanel>
-
-                    <!-- Имя -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="0,0,0,15">
-                        <TextBlock Text="Имя:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <TextBox Name="FirstNameBox" Width="350" Height="60" Margin="15,0,0,0" FontSize="20" />
-                    </StackPanel>
-
-                    <!-- Фамилия -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="4" Margin="0,0,0,15">
-                        <TextBlock Text="Фамилия:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <TextBox Name="LastNameBox" Width="350" Height="60" Margin="15,0,0,0" FontSize="20" />
-                    </StackPanel>
-
-                    <!-- Пол -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="5" Margin="0,0,0,15">
-                        <TextBlock Text="Пол:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <ComboBox Name="GenderComboBox" Width="350" Height="60" Margin="15,0,0,0" FontSize="20">
-                            <ComboBoxItem Content="Мужской" />
-                            <ComboBoxItem Content="Женский" />
-                        </ComboBox>
-                    </StackPanel>
-
-                    <!-- Страна -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="6" Margin="0,0,0,15">
-                        <TextBlock Text="Страна:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <ComboBox Name="CountryComboBox" Width="350" Height="60" Margin="15,0,0,0" FontSize="20">
-                            <ComboBoxItem Content="Russia" />
-                            <!-- Добавьте другие страны по необходимости -->
-                        </ComboBox>
-                    </StackPanel>
-
-                    <!-- Дата рождения -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="7" Margin="0,0,772,15">
-                        <TextBlock Text="Дата рождения:" Width="150" VerticalAlignment="Center" FontSize="20" />
-                        <DatePicker Name="BirthDatePicker" Width="350" Height="60" Margin="15,0,0,0" FontSize="20" />
-                        <!-- Календарная иконка -->
-                    </StackPanel>
-                </Grid>
-
-                <!-- Правая часть формы (фото) -->
-                <Grid Grid.Column="1" Margin="20,102,0,0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-
-                    <!-- Место для фото -->
-                    <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Grid.Row="0" Margin="192,174,72,412">
-                        <Image  Stretch="UniformToFill" Width="220" Height="220" />
-                    </Border>
-
-                    <!-- Надпись "Фото" -->
-                    <TextBlock Text="Фото файл:" HorizontalAlignment="Left" Margin="34,501,0,355" FontSize="20" />
-
-                    <!-- Поле для пути к файлу фото -->
-                    <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="0,0,0,15">
-                        <TextBox Name="PhotoFilePathBox" Width="350" Height="60" Margin="0,0,15,0" Text="Photo_logo.jpg" FontSize="20" />
-                        <Button Content="Просмотр..." Width="220" Height="60" Margin="0,0,0,0" FontSize="20" />
-                    </StackPanel>
-                </Grid>
-            </Grid>
-
-            <!-- Кнопки "Регистрация" и "Отмена" -->
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,758,0,0" Grid.RowSpan="2">
-                <Button Content="Регистрация" Width="220" Height="60" Margin="15,0,15,0" FontSize="20" />
-                <Button Content="Отмена" Width="220" Height="60" Margin="15,0,15,0" FontSize="20" />
-            </StackPanel>
-
+        <TextBlock HorizontalAlignment="Right" Grid.Row="3" TextWrapping="Wrap" Text="Email:" VerticalAlignment="Top" Height="38" Margin="0,8,2,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,8,365,0" Grid.Row="4" TextWrapping="Wrap" Text="Пароль:" VerticalAlignment="Top" Height="36" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="113" Grid.ColumnSpan="2"/>
+        <TextBlock HorizontalAlignment="Left" Margin="12,8,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" FontFamily="Open Sans Light" FontSize="27" Width="258" Grid.Column="1" Grid.ColumnSpan="2"><Run Text="Повторите пароль"/><Run Text=":"/></TextBlock>
+        <TextBlock HorizontalAlignment="Right" Margin="0,8,365,0" Grid.Row="6" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75" Grid.ColumnSpan="2"><Run Text="Имя"/><Run Text=":"/></TextBlock>
+        <TextBlock HorizontalAlignment="Right" Margin="0,8,368,0" Grid.Row="7" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="127" Grid.ColumnSpan="2"><Run Text="Фамилия"/><Run Text=":"/></TextBlock>
+        <TextBlock HorizontalAlignment="Right" Margin="0,8,2,0" Grid.Row="8" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="60"><Run Text="Пол"/><Run Text=":"/></TextBlock>
+        <TextBox Name="txb_email" Grid.Column="2" Height="46" Grid.Row="3" TextWrapping="Wrap" GotFocus="txb_email_GotFocus" Text="Email"  VerticalAlignment="Top" Margin="15,8,6,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
+        <TextBox Name="txb_pass" Grid.Column="2" Height="44" Grid.Row="4" TextWrapping="Wrap" GotFocus="txb_pass_GotFocus" Text="Пароль" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
+        <TextBox Name="txb_repeatpass" Grid.Column="2" Height="46" Grid.Row="5" TextWrapping="Wrap" GotFocus="txb_repeatpass_GotFocus" Text="Повторите пароль" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
+        <TextBox Name="txb_name" Grid.Column="2" Height="44" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_name_GotFocus" Text="Имя" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
+        <TextBox Name="txb_surname" Grid.Column="2" Height="46" Grid.Row="7" TextWrapping="Wrap" GotFocus="txb_surname_GotFocus" Text="Фамилия" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
+        <ComboBox Name="cmb_gender" Grid.Column="2" Margin="15,8,120,0" Grid.Row="8" VerticalAlignment="Top" FontFamily="Open Sans Light" FontSize="27" Height="44" />
+        <TextBlock HorizontalAlignment="Left" Margin="126,64,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Grid.Column="4" Text="Фото файл:" Width="150" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2"/>
+        <Rectangle Grid.Column="6" Fill="#FFEAEAEA" HorizontalAlignment="Left" Height="180" Grid.Row="3" Grid.RowSpan="4" Stroke="Black" VerticalAlignment="Bottom" Width="165" Margin="8,0,0,66"/>
+        <TextBlock Grid.Column="6" Margin="45,50,90,74" Grid.Row="4" TextWrapping="Wrap" Text="Фото" FontFamily="Open Sans Light" FontSize="27" TextAlignment="Center" Grid.RowSpan="2"/>
+        <TextBox x:Name="txb_pathphoto" Grid.Column="4" Height="44" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_pathphoto_GotFocus" Text="Photo_logo.png" VerticalAlignment="Top" Margin="101,26,0,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Left" Width="375" Grid.ColumnSpan="2"/>
+        <Image Name="imgAvatar" Grid.Column="6" HorizontalAlignment="Left" Height="180" Margin="8,0,0,66" Grid.Row="3" Grid.RowSpan="4" VerticalAlignment="Bottom" Width="165"/>
+        <Button Name="btn_source" Content="Просмотр..." Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="5" Grid.Row="6" Click="btn_source_Click" Margin="0,0,54,12" Grid.ColumnSpan="2">
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <Grid Grid.Column="4" Margin="15,74,0,2" Grid.Row="6" Grid.ColumnSpan="3" Grid.RowSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="225"/>
+                <ColumnDefinition Width="375"/>
+            </Grid.ColumnDefinitions>
+            <DatePicker Name="dateBirth"  Margin="0,0,15,0" VerticalAlignment="Top" Grid.Column="2" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
+            <TextBlock HorizontalAlignment="Right" Margin="0,4,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="215" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Дата рождения"/><Run Text=":"/></TextBlock>
         </Grid>
+        <Grid Grid.Column="4" Margin="15,0,0,12" Grid.Row="8" Grid.ColumnSpan="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="375"/>
+            </Grid.ColumnDefinitions>
+            <ComboBox Name="cmbCountry" Grid.Column="2" Margin="0,4.5,15,0" VerticalAlignment="Top" Height="45" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
+            <TextBlock HorizontalAlignment="Right" Margin="0,4.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37.5" Width="112.5" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Страна"/><Run Text=":"/></TextBlock>
+        </Grid>
+        <Grid Grid.Column="1" HorizontalAlignment="Left" Height="158" Margin="150,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="1050" Grid.ColumnSpan="6">
+            <TextBlock HorizontalAlignment="Left" Margin="375,-7.5,0,0" TextWrapping="Wrap" Text="Регистрация бегуна" VerticalAlignment="Top" FontSize="42" Foreground="#FF6C6C6C" Height="52.5"/>
+            <TextBlock HorizontalAlignment="Left" Margin="30,75,0,12" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="27" Width="975" TextAlignment="Center" Foreground="#FF6C6C6C"><Run Text="Пожалуйста заполните всю информацию, чтобы зарегистрировать"/><Run Text="с"/><Run Text="я в качестве бегуна"/></TextBlock>
+        </Grid>
+        <Button x:Name="btn_Reg" Content="Регистрация" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="9" Margin="0,0,6,22" Click="btn_Reg_Click">
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <Button x:Name="btn_cancel" Content="Отмена" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="4" Grid.Row="9" Margin="0,0,216,22">
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </Button.Resources>
+        </Button>
     </Grid>
 </Page>
